# story-builder

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  heroku.yml  zzz.md
server/: .env  .env.example  Dockerfile  README.md  Readme.md  main.py  mypy-watch.sh  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  type-check.sh
server/app/: context.py  main.py  request_types.py
server/app/domains/: auth_service.py  store_service.py  synchronization_service.py  type_def.py  user_service.py
server/app/endpoints/: common.py
server/app/repositories/: user_repository.py  user_repository_port.py
server/app/tests/: conftest.py  test_delete_progress.py  test_synchronization_load.py  test_synchronization_save_builder.py  test_synchronization_save_library.py  test_synchronization_save_stories.py  test_synchronization_story_progress.py
server/app/utils/: error_adapter.py  errors.py  lexical_content.py  result.py  scene_content.py  type_defs.py
server/data_types/: user.py
server/domains/: user.py
server/request_http/: builder.http  store.http  user.http
server/src/: main.py
server/src/data_types/: builder.py  game.py  requests.py  response.py  synchronization.py  user.py
server/src/domains/: builder.py  builder_domain.py  store.py  store_domain.py  store_service.py  synchronization_domain.py  type_def.py  user.py  user_domain.py  user_service.py
server/src/repositories/: mongo_repository.py  story_progress_repository.py  story_repository.py  (+4 more)
server/utils/: connect.py  format.py  format_id.py
(+545 files in other folders)
