[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pydantic>=2.9.2",
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.2",
]
