[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi[standard]>=0.115.4",
    "pydantic>=2.9.2",
    "pyjwt>=2.9.0",
    "pymongo[srv]>=4.10.1",
    "python-dotenv>=1.0.1",

]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.2",
    "pytest-env>=1.1.5",
]
